--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,6 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Permanent+Marker&display=swap');
+
+
+body {
+    background-color: #141414;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px 250px;
+}
+
 h1 {
     text-align: center;
-    color:red;
+    color:#b4733f;
+    font-size: 5em;
+    font-family: 'Permanent Marker', cursive;
+    margin: 0px;
 }
 
 .contents {
@@ -9,6 +22,23 @@ h1 {
 }
 
 ol {
-    list-style: square;
+    align-items: center;
+    list-style-type: none; 
+    padding-left: 0; 
+    font-size: 2em;
+    text-align: center;
 }
 
+a:link , a:visited{
+    color:white;
+    text-decoration: none;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 1.5em;
+}
+
+
+@media only screen and (max-width: 600px) {
+
+
+
+}
