--- a/week8/css/teamstyle.css
+++ b/week8/css/teamstyle.css
@@ -7,62 +7,136 @@
 }
 
 body {
+    background-color: black;
     background-image: url("../images/deathstar.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-
     display: grid;
     align-items: center;
     justify-content: center;
     font-size: 1.25em;
-       
-    
 }
 
 section {
-   
+
     padding: 1em;
     margin-bottom: .5em;
     max-width: 400px;
-    
-    
+
+
 }
 
-h2 {
- color: #ffe81f;
- text-align: center;
- font-family: 'Russo One', sans-serif;
- text-transform: uppercase;
- font-size: 2em;
- 
+/* h2, */
+section a {
+    color: #ffe81f;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Russo One', sans-serif;
+    text-transform: uppercase;
+    font-size: 2em;
+
+}
+
+section a:hover {
+    text-decoration: underline;
 }
 
 p {
- color: #ffe81f;
- font-family: 'Pathway Gothic One', sans-serif;
- text-transform: uppercase;
- font-size:1.5em;
- font-weight:200;
-
+    color: #ffe81f;
+    font-family: 'Pathway Gothic One', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: 200;
 }
+
+.pagination a {
+    color: #ffe81f;
+    font-family: 'Pathway Gothic One', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: 200;
+    margin: 1em;
+}
+
+.url {
+    color: #ffe81f;
+}
+
+.hidden {
+    display: none;
+}
+
+.details {
+    max-width: 50%;
+    margin-left: 3em;
+    margin-bottom: 1em;
+    color: #ffe81f;
+    font-family: 'Pathway Gothic One', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: 200;
+    border: solid 2px #ffe81f;
+}
+
+#detailsbox dl {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#detailsbox dt {
+    flex: 0 1 20%;
+    margin-bottom: .5em;
+}
+
+.name,
+.birthYear,
+.height,
+.mass,
+.hairColor,
+.skinColor,
+.gender {
+    flex: 0 1 70%;
+    margin-left: 0;
+    margin-bottom: .5em;
+}
+
+
 
 
 @media only screen and (max-width: 600px) {
 
-.cards{
-    display: grid;
-    grid-template-columns: 1fr;
-}
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 
-h2 {
-    color:#10D1FF;
-    font-family: 'Pathway Gothic One', sans-serif;
-    font-size: 2.5em;
-}
+    section a {
+        color: #10D1FF;
+        font-family: 'Pathway Gothic One', sans-serif;
+        font-size: 2.5em;
+    }
 
-p {
-    color: #10D1FF;
-    text-transform: capitalize;
-}
+    p {
+        color: #10D1FF;
+        text-transform: capitalize;
+    }
 
+    .details {
+        max-width: 95%;
+        margin: 1em auto;
+        color: #10D1FF;
+        border: solid 2px #10D1FF;
+    }
+
+    .pagination {
+        text-align: center;
+    }
+
+    .pagination a {
+        color: #10D1FF;
+
+    }
 }
