--- a/finalproject/css/hotwheels.css
+++ b/finalproject/css/hotwheels.css
@@ -5,3 +5,15 @@
 #randomcar {
     display: none;
 }
+
+.modelname {
+    color: blue;
+}
+
+.makename {
+    color: pink;
+}
+
+.carnumber {
+    color: green;
+}
