--- a/week5/liststyle.css
+++ b/week5/liststyle.css
@@ -1,10 +1,12 @@
-
-
+html {
+    width: 100vw;
+}
 body {
     margin: 250px;
     background-color:#141414 ;
     text-transform:uppercase;
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
 .todolistdiv {
@@ -42,6 +44,14 @@ li {
  font-size: 2em;
 }
 
+#hwcarlist {
+    display: grid; 
+  grid-auto-columns: 1fr; 
+  grid-auto-rows: 1fr; 
+  grid-template-columns: 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr 1fr 1fr; 
+  gap: 0px 0px; 
+}
 
 
 @media only screen and (max-width: 600px) {
