--- a/finalproject/css/hotwheels.css
+++ b/finalproject/css/hotwheels.css
@@ -8,6 +8,8 @@ font-family: 'Racing Sans One', cursive;
 /* styling for JS to work */
 html {
     overflow-y: scroll;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 
@@ -116,6 +118,9 @@ li {
     transform: translateY(-2px);
   }
 
+ 
+ 
+
 
 /* mobile specific style */
 @media only screen and (max-width: 600px) {
@@ -156,8 +161,7 @@ li {
         font-size: 1.75em;
     }
 
-
-
+    
 
    
 }
