--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -6,6 +6,7 @@ body {
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
     margin: 10px 250px;
+    color:#FFFFFF;
 }
 
 h1 {
@@ -15,6 +16,12 @@ h1 {
     font-family: 'Permanent Marker', cursive;
     margin: 0px;
 }
+
+h2 {
+    color: #FFFFFF;
+}
+
+
 
 .contents {
     display: flex;
